# purepan

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.image.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml
.github/workflows/config/: accounts.json  accounts.json.bak  app.toml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  server_setup.rs
backend/src/auth/: qrcode.rs
backend/src/config/: mod.rs
config/: app.toml.example
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/api/: accounts.ts  auth.ts  budget.ts  client.ts  config.ts  file.ts  filesystem.ts  localFiles.ts  webAuth.ts
frontend/src/components/: AccountSwitcher.vue  BackupTaskDetail.vue  ConflictStrategySelector.vue  NetdiskFolderPickerModal.vue  NetdiskPathSelector.vue  ShareDialog.vue  ShareDirectDownloadDialog.vue  ShareFileSelector.vue  TitleBar.vue  TransferDialog.vue  UserProfileDialog.vue
frontend/src/composables/: useTheme.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/startup/: application.ts  bootstrap.ts
frontend/src/stores/: auth.ts  webAuth.ts
frontend/src/styles/: main.scss  theme.scss
scripts/: build.sh  deploy.sh  local-deploy.sh  test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: BaiduNet-Rust.lnk  app.toml
src-tauri/src/: ipc.rs  main.rs
tests/: performance_test.sh
(+28 files in other folders)
